sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:7: error: not found: value SetValue
      SetValue(j+1,getValue(j))
      ^AlgInsertionSort:10: error: value setValue is not a member of Unit
possible cause: maybe a semicolon is missing before `value setValue'?
  }setValue(j+1,x)
   ^AlgInsertionSort:10: error: not found: value j
  }setValue(j+1,x)
            ^AlgInsertionSort:10: error: not found: value x
  }setValue(j+1,x)
                ^